--- a/Changes
+++ b/Changes
@@ -1,5 +1,5 @@
 Revision history for Dist-Zilla-Plugin-InsertDistImage
 
-0.001   2016-07-13 (PERLANCAR) (unreleased)
+0.001   2016-07-13 (PERLANCAR)
 
          - First release.
