--- a/Changes
+++ b/Changes
@@ -1,5 +1,12 @@
 Revision history for Dist-Zilla-Plugin-InsertDistImage
 
+0.002   2016-07-13 (PERLANCAR)
+
+	- Implement hosting=data.
+
+	- Add configuration: {include,exclude}_{files,file_pattern}.
+
+
 0.001   2016-07-13 (PERLANCAR)
 
          - First release.
