--- a/Changes
+++ b/Changes
@@ -1,5 +1,13 @@
 Revision history for Dist-Zilla-Plugin-InsertDistImage
 
+0.004   2016-07-16 (PERLANCAR)
+
+        - [Removed] Remove check_exists configuration.
+
+        - Allow alternate location of image using this syntax: #IMAGE
+          location1|location2.
+
+
 0.003   2016-07-13 (PERLANCAR)
 
 	- Add configuration: check_exists, change default to not check that
