--- a/Changes
+++ b/Changes
@@ -1,3 +1,11 @@
+0.005   2017-06-09 (PERLANCAR)
+
+	- Replace api.metacpan.org URL because MetaCPAN v0 API has been
+	  shut down.
+
+	- [doc] Fix Synopsis [RT#122009].
+
+
 0.004   2016-07-16 (PERLANCAR)
 
         - [Removed] Remove check_exists configuration.
